force-app/main/default/objects/OpportunityLineItem/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <type>Text</type>
</CustomField>