force-app/main/default/objects/OpportunityLineItem/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>