force-app/main/default/objects/OpportunityLineItem/fields/Licensing_Type__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Licensing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensing Type</label>
    <type>Text</type>
</CustomField>