force-app/main/default/objects/OpportunityLineItem/fields/netsuite_conn__User_Entered_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__User_Entered_Sales_Price__c</fullName>
    <label>User Entered Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>