force-app/main/default/objects/OpportunityLineItem/fields/Opp_Prod_Family__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prod_Family__c</fullName>
    <description>Field created for services only amount flow into NS</description>
    <label>Opp Prod Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>