force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Formula__c</fullName>
    <formula>Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name (Formula)</label>
    <type>Text</type>
</CustomField>