force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Formula__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name (Formula)</label>
    <type>Text</type>
</CustomField>