force-app/main/default/objects/OpportunityLineItem/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <formula>TEXT(Opportunity.Project_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>