force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price_40__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_40__c</fullName>
    <formula>UnitPrice *0.4</formula>
    <label>Sales Price 40%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>