force-app/main/default/objects/OpportunityLineItem/fields/Technology_Platform__c.field-meta.xml
<CustomField>
    <fullName>Technology_Platform__c</fullName>
    <label>Technology Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Jive</fullName>
            </value>
            <value>
                <fullName>Sitecore</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>7Summits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>