force-app/main/default/objects/OpportunityLineItem/fields/X7Summits_Enterprise_Apps__c.field-meta.xml
<CustomField>
    <fullName>X7Summits_Enterprise_Apps__c</fullName>
    <description>Un-managed IP components.</description>
    <inlineHelpText>Un-managed IP components.</inlineHelpText>
    <label>7Summits Enterprise Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ideas</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Knowledge Base Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>